--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
+    "gsap": "^3.11.4",
+    "three": "^0.149.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
