using the slider from ElementPlus instead

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
+    "element-plus": "^2.2.32",
     "gsap": "^3.11.4",
     "three": "^0.149.0",
     "vue": "^3.2.13",
